Implement Tinkerpop/Ferma-based persistence layer on top of Neo4j bolt driver